--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
     "name": "YouGlance",
-    "description": "Youtube video keywood search and sentiment analysis",
-    "version":"1",
-    "browser_action":{
-        "default_popup":"index.html"
+    "version": "1.0",
+    "description": "Keyword Search ",
+    "manifest_version": 2,
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "index.html"
     },
-    "permission":["activeTab"]
-}
+    "permissions": ["activeTab","storage"]
+    }
+    
